--- a/dashdjango/templates/index.html
+++ b/dashdjango/templates/index.html
@@ -11,19 +11,33 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container py-5">
       <h1>{{ Tesla }}</h1>
+      <hr>
     </div>
     <div class="row">
+      <div class="col-1">
+      </div>
       <div class="col-4">
         <img alt="Nikola Tesla, el hombre que cambió el mundo" class="n3VNCb" src="https://img-cdn.hipertextual.com/files/2014/06/Nikola-Tesla.jpg?strip=all&amp;lossy=1&amp;quality=70&amp;resize=740%2C490&amp;ssl=1" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 527px; height: 348.959px; margin: 0px;">
-        <h3><em>El presente es de ellos, pero el futuro, por el cual trabajé tanto, es mío.</em></h3>
+        <h3 class="text-center"><em>"El presente es de ellos, pero el futuro, por el cual trabajé tanto, es mío".</em></h3>
+      </div>
+      <div class="col-1">
       </div>
       <div id="chartjs-contener" class="col-5" style="width: 100%; height: 80% backgroundColor: black">
         <h3 class="text-right">Dashboard Example...</h3>
         <canvas id="myChart"></canvas>
+        <button id="actualizar" type="button" class="btn btn-secondary btn-lg btn-block " style="background-color:#8b8bc0" onclick="actualizar()">Actualizar Datos</button>
       </div>
     </div>
+    <div class="container">
+      <hr>
+    </div>
+    <script>
+    function actualizar(){
+      document.getElementById("chartjs-contener").innerHTML = location.reload();
+    }
+    </script>
     <script type="text/javascript" src="{% static 'js/jquery.js'%}"></script>
     <script type="text/javascript" src="{% static 'js/chart.js' %}"></script>
   </body>
