--- a/dashdjango/templates/index.html
+++ b/dashdjango/templates/index.html
@@ -5,40 +5,72 @@
     <meta charset="utf-8">
     <title>Nikola Tesla</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container py-5">
+    <div class="container text-center py-5">
       <h1>{{ Tesla }}</h1>
       <hr>
     </div>
     <div class="row">
       <div class="col-1">
       </div>
-      <div class="col-4">
-        <img alt="Nikola Tesla, el hombre que cambió el mundo" class="n3VNCb" src="https://img-cdn.hipertextual.com/files/2014/06/Nikola-Tesla.jpg?strip=all&amp;lossy=1&amp;quality=70&amp;resize=740%2C490&amp;ssl=1" data-noaft="1" jsname="HiaYvf" jsaction="load:XAeZkd;" style="width: 527px; height: 348.959px; margin: 0px;">
-        <h3 class="text-center"><em>"El presente es de ellos, pero el futuro, por el cual trabajé tanto, es mío".</em></h3>
+      <div class="col-4 p-3 shadow  card rounded">
+        <img id="Tesla" src="{% static 'imag/Nikola-Tesla.jpg' %}" alt="Nikola Tesla" style="width: 610px; height: 350px">
+        <div class="card-body">
+          <h3 class="text-center"><em>"El presente es de ellos, pero el futuro, por el cual trabajé tanto, es mío".</em></h3>
+        </div>
       </div>
       <div class="col-1">
       </div>
-      <div id="chartjs-contener" class="col-5" style="width: 100%; height: 80% backgroundColor: black">
+      <div id="chartjs-contener" class="col-5 p-3 shadow  card rounded" style="width: 100%; height: 80%">
         <h3 class="text-right">Dashboard Example...</h3>
         <canvas id="myChart"></canvas>
-        <button id="actualizar" type="button" class="btn btn-secondary btn-lg btn-block " style="background-color:#8b8bc0" onclick="actualizar()">Actualizar Datos</button>
+        <button id="actualizar" type="button" class="btn btn-secondary btn-lg btn-block " style="background-color:#8b8bc0">Actualizar Datos</button>
       </div>
     </div>
     <div class="container">
       <hr>
     </div>
+    <div class="row">
+      <div class="col-1">
+      </div>
+      <div class="col-4 text-center p-3 shadow  card rounded py-3">
+        <div class="col-9">
+          <canvas id="myChart1"></canvas>
+        </div>
+        <!-- <h1 id="prueba">Esta fuera del rango 1-3</h1> -->
+      </div>
+    </div>
     <script>
-    function actualizar(){
-      document.getElementById("chartjs-contener").innerHTML = location.reload();
-    }
+      document.getElementById("actualizar").addEventListener('click', function(){
+      console.log("click...")
+    });
     </script>
     <script type="text/javascript" src="{% static 'js/jquery.js'%}"></script>
     <script type="text/javascript" src="{% static 'js/chart.js' %}"></script>
+    <!-- <script type="text/javascript">
+    var msg;
+    var numero = parseInt(prompt("Ingrese un numero 1-3: "));
+    switch (numero) {
+      case 1:
+                msg = "Esto es una prueba Elemento 1";
+                break;
+      case 2:
+                msg = "Esto es una prueba Elemento 2";
+                break;
+      case 3:
+                msg = "Esto es una prueba Elemento 3";
+                break;
+    }
+    if (msg == undefined) {
+      null
+    }
+    document.getElementById("prueba").innerHTML = msg;
+
+    </script> -->
   </body>
 </html>
